--- a/static/main.css
+++ b/static/main.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: "StolzlRegular";
-    src: url("/static/font/Stolzl/stolzl_regular.otf") format("opentype");
+    src: url("font/Stolzl/stolzl_regular.otf") format("opentype");
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: "StolzlMedium";
-    src: url("/static/font/Stolzl/stolzl_medium.otf") format("opentype");
+    src: url("font/Stolzl/stolzl_medium.otf") format("opentype");
     font-style: bold;
     font-weight: bold;
 }
 
 @font-face {
     font-family: "StolzlLight";
-    src: url("/static/font/Stolzl/stolzl_light.otf") format("opentype");
+    src: url("font/Stolzl/stolzl_light.otf") format("opentype");
     font-style: thin;
     font-weight: thin;
 }
@@ -35,7 +35,7 @@ body, .hero:before {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "StolzlRegular";
-    color: #1E1E1E;
+    color: white;
     margin: 0px !important;
     
 }
@@ -49,13 +49,17 @@ h1, h2, h3, h4, h5, h6 {
     align-items: flex-end !important;
 }
 
-.title {
-    padding-bottom: 24px;
-    margin-left: 70px;
+.hero-marquee-item__tag {
+    align-items: center;
+}
+
+.hero .title {
+    padding-bottom: 5%;
+    margin-left: 4%;
     text-align: left;
 }
 
-.heart {
+.hero-marquee-item__tags .hero-marquee-item__tag .heart {
     padding-right: 6px;
 }
 
@@ -74,10 +78,11 @@ h1 {
     font-size: 36px;
     line-height: 43px;
     margin: auto;
+    color: #1E1E1E;
 }
 
 h4 {
-    color: white !important;
+    margin: auto !important;
 }
 
 a {
