--- a/static/main.css
+++ b/static/main.css
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero .title {
-    padding-bottom: 5%;
+    padding-bottom: 24px;;
     margin-left: 4%;
     text-align: left;
 }
